alpha - v0.2 - Fixed head, style, script, body grabber - Added code on-hover preload function ✨ - Changed file names / positions - Updated Readme ~JavaScript is still required for pages to work, will change in the next update~

--- a/src/app.html
+++ b/src/app.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    %JNX-HEAD%
 </head>
 <body>
-    %JNX-BODY%
+    <div id="app">
+        
+    </div>
 </body>
 </html>
