--- a/src/app.html
+++ b/src/app.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    %JNX-HEAD%
 </head>
 <body>
     <div id="app">
-        
+        %JNX-BODY%
     </div>
 </body>
 </html>
